# mintpdf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cli.py  config.py  cover_page.py  document_analyzer.py  file_manager.py  font_manager.py  formatter.py  logger.py  main.py  metadata.py  pdf_engine.py  pyproject.toml  requirements.txt  settings.py  template_manager.py  theme_manager.py  toc.py
.github/workflows/: ci.yml  publish.yml
docs/: development.md
src/mintpdf/: __init__.py  __main__.py  cli.py  config.py  cover_page.py  document_analyzer.py  event_dispatcher.py  file_manager.py  font_manager.py  formatter.py  logger.py  main.py  metadata.py  pdf_engine.py  settings.py  template_manager.py  theme_manager.py  toc.py  utils.py
src/mintpdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mintpdf/domain/: __init__.py  models.py
src/mintpdf/pipeline/: __init__.py  document_builder.py  document_loader.py  exporter.py  layout_builder.py  renderer.py
src/mintpdf/plugins/: __init__.py  base.py  manager.py
src/mintpdf/services/: __init__.py  configuration_service.py  cover_page_service.py  document_analysis_service.py  export_service.py  font_service.py  metadata_service.py  template_service.py  theme_service.py  toc_service.py
tests/: conftest.py  test_config.py  test_di_events_env.py  test_document_analyzer.py  test_domain.py  test_formatter.py  test_pdf_engine.py  test_pipeline.py  test_plugins.py  test_services.py  test_templates_themes.py  test_utils.py
