[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mintpdf"
version = "1.0.0"
description = "AI-Free Professional PDF Generator for the Terminal"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Antigravity" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop"
]
dependencies = [
    "rich>=13.0.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "markdown>=3.4.0",
    "python-docx>=1.0.0",
    "pygments>=2.15.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0"
]

[project.urls]
Homepage = "https://github.com/sayfalse/mintpdf"
Repository = "https://github.com/sayfalse/mintpdf"

[project.scripts]
mintpdf = "mintpdf.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mintpdf"]

[tool.setuptools.package-data]
mintpdf = ["assets/*", "fonts/*", "templates/*", "themes/*", "icons/*"]
