[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mintpdf"
version = "1.0.0"
description = "AI-Free Professional PDF Generator for the Terminal"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Antigravity" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop"
]
dependencies = [
    "rich>=13.0.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "markdown>=3.4.0",
    "python-docx>=1.0.0",
    "pygments>=2.15.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0"
]
lint = [
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0"
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy"
]


[project.urls]
Homepage = "https://github.com/sayfalse/mintpdf"
Repository = "https://github.com/sayfalse/mintpdf"

[project.scripts]
mintpdf = "mintpdf.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mintpdf"]

[tool.setuptools.package-data]
mintpdf = ["assets/*", "fonts/*", "templates/*", "themes/*", "icons/*"]
